--- a/src/app/(web)/globals.css
+++ b/src/app/(web)/globals.css
@@ -1,4 +1,18 @@
+/* prettier-ignore */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+.img {
+   @apply object-cover w-full h-full
+}
+
+/* .scale-animation {
+   @apply hover:scale-125;
+   @apply transition-all duration-700;
+} */
+
+/* .btn-primary {
+   @apply px-6 md: px-[50px] lg:px-[72px] py-2 md:py-5 bg-primary rounded-lg md:rounded-2xl shadow-sm shadow-primary text-white font-bold text-base md:text-xl hover:sclae-110 duration-300 transition-all
+} */
